--- a/ai-s4_conda.yaml
+++ b/ai-s4_conda.yaml
@@ -1,4 +1,4 @@
-name: ai-s4-gpu
+name: ai-s4
 channels:
   - pytorch
   - conda-forge
@@ -12,8 +12,4 @@ dependencies:
   - scikit-learn=1.7.2
   - seaborn=0.13.2
   - pip:
-      - torch==2.9.0+cu128
-      - torchaudio==2.9.0+cu128
-      - torchmetrics==1.0.3
-      - torchvision==0.24.0+cu128
       - torchinfo==1.8.0
