--- a/ai-s4_conda_cpu.yaml
+++ b/ai-s4_conda_cpu.yaml
@@ -5,9 +5,11 @@ channels:
 dependencies:
   - jupyterlab=4.4.10
   - matplotlib=3.10.7
+  - pandas=2.3.3
+  - pip=25.2
+  - polars=1.35.1
   - python=3.13.9
   - scikit-learn=1.7.2
-  - pandas=2.3.3
   - seaborn=0.13.2
   - pip:
       - torch==2.9.0+cpu
